--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -12,6 +12,8 @@
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
     scroll-behavior: smooth;
+
+    
   }
   
   /* Sections
@@ -23,6 +25,7 @@
   
   body {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
  
   }
   
