--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -76,14 +76,40 @@ html {
   border: 1px solid #ccc; /* Borde similar a otros botones en tu aplicación */
 }
 
-/* Estilos para el editor Trix */
+/* Estilos base para el editor Trix */
 trix-editor {
   background: white;
   overflow-wrap: break-word;
   word-wrap: break-word;
   overflow: auto;
-  max-height: 80px;
-  max-width: 700px;
+  max-width:  auto;
+  max-height: 50px;
+}
+
+/* Estilos base para el editor Trix */
+trix-editor {
+  background: white;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: auto;
+  max-width: 100% !important; /* Cambia 'auto' por '100%' */
+  max-height: 50px;
+}
+
+/* Media query para pantallas medianas (md) */
+@media (min-width: 768px) {
+  trix-editor {
+    max-height: 100px;
+    max-width: 100% !important; /* Cambia 'auto' por '100%' */
+  }
+}
+
+/* Media query para pantallas grandes (lg) */
+@media (min-width: 1024px) {
+  trix-editor {
+    max-height: 120px;
+    max-width: 100% !important; /* Cambia 'auto' por '100%' */
+  }
 }
 
 /* Estilos generales para divs */
